feat: rename to "history items" (`HistoryItem` model + minimal changes)
