# app/controllers/api/v1/taxon_history_items_controller.rb
@@ -6,11 +6,11 @@ module Api
       ATTRIBUTES = [:id, :protonym_id, :position, :taxt, :created_at, :updated_at]
 
       def index
-        render json: with_limit(TaxonHistoryItem.all).as_json(only: ATTRIBUTES, root: true)
+        render json: with_limit(HistoryItem.all).as_json(only: ATTRIBUTES, root: true)
       end
 
       def show
-        item = TaxonHistoryItem.find(params[:id])
+        item = HistoryItem.find(params[:id])
         render json: item.as_json(only: ATTRIBUTES, root: true)
       end
     end
