# app/controllers/taxon_history_items/histories_controller.rb
@@ -4,7 +4,7 @@ module TaxonHistoryItems
   class HistoriesController < ApplicationController
     def show
       @comparer = RevisionComparer.new(
-        TaxonHistoryItem, params[:taxon_history_item_id], params[:selected_id], params[:diff_with_id]
+        HistoryItem, params[:taxon_history_item_id], params[:selected_id], params[:diff_with_id]
       )
       @revision_presenter = RevisionPresenter.new(
         comparer: @comparer,
